--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./CSS/main.css">
+    <link rel="stylesheet" href="./CSS/responsive.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="header" style="height: 128px;width: 1519px">
+    <div class="header" style="height: 128px;">
         <div class="container">
             <div class="row">
                 <div class="logo">
@@ -29,23 +31,28 @@
             </div>
         </div>
     </div>
-
     <section class="slide-area">
         <div class="banner-right">
             <img src="./Image/slider-img.png">
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="slider-content">
-                    <h2>Awesome App Showcase
-                        <br>
-                        For your Business Solution
-                    </h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has 
-                    been the industry's standard dummy text ever since the
-                    </p> 
-                    <div class="slide-btn">
-                        <a href="#">Start Free Trial</a>
+        <div class="banner-image">
+            <div class="display-table">
+                <div class="display-table-cell">
+                    <div class="container">
+                        <div class="row">
+                            <div class="slider-content">
+                                <h2>Awesome App Showcase
+                                <br>
+                                For your Business Solution
+                                </h2>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has 
+                            been the industry's standard dummy text ever since the
+                            </p> 
+                            <div class="slide-btn">
+                                <a href="#">Start Free Trial</a>
+                            </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -253,7 +260,7 @@
                         <br>
                         Ipsum has been the industry's
                     </p>
-                </div>
+                
                 <div class="review">
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -262,6 +269,7 @@
                     <span class="fa fa-star checked"></span>
                     <span>(4.9 Review of 2 Milion User)</span>
                 </div>
+
                 <div class="review-image">
                     <ul>
                         <li>
@@ -275,6 +283,7 @@
                             </a>
                         </li>
                     </ul>
+                </div>
                 </div>
             </div>
         </div>
@@ -447,6 +456,5 @@
             </div>
         </div>
     </section>
-    </div>
 </body>
 </html>
