Update new version

--- a/index.html
+++ b/index.html
@@ -163,6 +163,82 @@
         </div>
     </section>
 
+    <section class="screenshot-area">
+        <div class="container">
+            <div class="row">
+                <div class="screenshot-column">
+                    <div class="section-title">
+                        <p>App Screenshots</p>
+                        <h2>
+                            Awesome Screens Design Base 
+                            <br>
+                            Our Experience
+                        </h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="screenshot-all">
+                    <div class="stage-outer">
+                        <div class="stage" id="d1" style="transition: all 0.25s ease 0s">
+                            <!-- <div class="item-cloned" style="width: 108px; margin-right: 15px;">
+                                <div class="nav">
+                                    <div class="prev">
+                                        <i class="fa fa-angle-left" ></i>
+                                    </div>
+                                </div>
+                            </div> -->
+                            <!-- <div class="image"> -->
+                            <div class=" item-cloned1" style="width: 216px; margin-right: 15px;">
+                                <div class="single-screenshot">
+                                    <img src="./Image/screen-1.jpg" alt>
+                                </div>
+                            </div>
+                            <div class=" item-cloned1" style="width: 216px; margin-right: 15px;">
+                                <div class="single-screenshot">
+                                    <img src="./Image/screenshot2.jpg" alt>
+                                </div>
+                            </div>
+                            <div class=" item-cloned1" style="width: 216px; margin-right: 15px;">
+                                <div class="single-screenshot">
+                                    <img src="./Image/screenshot3.jpg" alt>
+                                </div>
+                            </div>
+                            <div class=" item-cloned1" style="width: 216px; margin-right: 15px;">
+                                <div class="single-screenshot">
+                                    <img src="./Image/screenshot4.jpg" alt>
+                                </div>
+                            </div>
+                            <div class=" item-cloned1" style="width: 216px; margin-right: 15px;">
+                                <div class="single-screenshot">
+                                    <img src="./Image/screenshot5.jpg" alt>
+                                </div>
+                            </div>
+                            <!-- </div> -->
+                            <!-- <div class="item-cloned" style="width: 108px; margin-right: 15px;">
+                                <div class="nav">
+                                    <div class="next">
+                                        <i class="fa fa-angle-right" ></i>
+                                    </div>
+                                </div>
+                            </div> -->
+                        </div>
+                    </div>
+                    <div class="controls">
+                        <div class="nav">
+                            <div class="prev">
+                                <i class="fa fa-angle-left" ></i>
+                            </div>
+                            <div class="next">
+                                <i class="fa fa-angle-right" ></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="pricing-area">
         <div class="container">
             <div class="row">
@@ -457,4 +533,5 @@
         </div>
     </section>
 </body>
+    <script src="./JS/main.js"></script>
 </html>
